--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,6 @@ ol {
   background-color: #f4f4fd;
 }
 
-.our-tean-list {
+.section-our-team ul .our-team-list {
   background-color: #ffffff;
 }
